name alignment corrected in profile

--- a/public/css/autocomplete.css
+++ b/public/css/autocomplete.css
@@ -411,7 +411,6 @@ body {
 }
 
 .profile-name {
-  margin-left: 24px;
   margin-bottom: 24px;
   font-size: 22px;
   color: #fff;
